<resources>
    <string name="app_name">Score Board</string>
    <string name="btn_reset">RESET</string>
    <string name="btn_plus_3">+3 POINT</string>
    <string name="btn_plus_2">+2 POINT</string>
    <string name="btn_plus_1">+1 POINT</string>
    <string name="team_score_b">0</string>
    <string name="team_score_a">0</string>
    <string name="lb_team_a">TEAM A</string>
    <string name="lb_team_b">TEAM B</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>