<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout style="@style/LayoutParent">

        <LinearLayout
            android:id="@+id/team_a"
            style="@style/LayoutChild">

            <TextView
                style="@style/LabelName"
                android:text="@string/lb_team_a" />

            <TextView
                android:id="@+id/lb_scoreA"
                style="@style/LabelTeamScore"
                android:text="@string/team_score_a" />

            <Button
                android:id="@+id/btn_plus1A"
                style="@style/PlusButton"
                android:text="@string/btn_plus_1" />

            <Button
                android:id="@+id/btn_plus2A"
                style="@style/PlusButton"
                android:text="@string/btn_plus_2" />

            <Button
                android:id="@+id/btn_plus3A"
                style="@style/PlusButton"
                android:text="@string/btn_plus_3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/team_b"
            style="@style/LayoutChild">

            <TextView
                style="@style/LabelName"
                android:text="@string/lb_team_b" />

            <TextView
                android:id="@+id/lb_scoreB"
                style="@style/LabelTeamScore"
                android:text="@string/team_score_b" />

            <Button
                android:id="@+id/btn_plus1B"
                style="@style/PlusButton"
                android:text="@string/btn_plus_1" />

            <Button
                android:id="@+id/btn_plus2B"
                style="@style/PlusButton"
                android:text="@string/btn_plus_2" />

            <Button
                android:id="@+id/btn_plus3B"
                style="@style/PlusButton"
                android:text="@string/btn_plus_3" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/LayoutPart2">

        <Button
            android:id="@+id/btn_reset"
            style="@style/ResetButton"
            android:text="@string/btn_reset" />
    </LinearLayout>

</LinearLayout>